test files, refuse to build with fork emulation

--- a/dist.ini
+++ b/dist.ini
@@ -5,5 +5,13 @@ copyright_holder = Dan Book
 copyright_year   = 2016
 
 [@Author::DBOOK]
-installer = ModuleBuildTiny::Fallback
+:version = 0.032
+installer = MakeMaker::Awesome
+MakeMaker::Awesome.delimiter = |
+MakeMaker::Awesome.header[0] = |use Config;
+MakeMaker::Awesome.header[1] = |if ($Config{d_pseudofork}) {
+MakeMaker::Awesome.header[2] = |  print "Subprocesses not supported with fork emulation\n";
+MakeMaker::Awesome.header[3] = |  exit 0;
+MakeMaker::Awesome.header[4] = |}
+irc = irc://irc.perl.org/#mojo
 pod_tests = 1
