include Sereal versions in reported prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -13,5 +13,7 @@ MakeMaker::Awesome.header[1] = |if ($Config{d_pseudofork}) {
 MakeMaker::Awesome.header[2] = |  print "Subprocesses not supported with fork emulation\n";
 MakeMaker::Awesome.header[3] = |  exit 0;
 MakeMaker::Awesome.header[4] = |}
+Test::ReportPrereqs.include[0] = Sereal::Encoder
+Test::ReportPrereqs.include[1] = Sereal::Decoder
 irc = irc://irc.perl.org/#mojo
 pod_tests = 1
