--- a/dist.ini
+++ b/dist.ini
@@ -15,5 +15,5 @@ MakeMaker::Awesome.header[3] = |  exit 0;
 MakeMaker::Awesome.header[4] = |}
 Test::ReportPrereqs.include[0] = Sereal::Encoder
 Test::ReportPrereqs.include[1] = Sereal::Decoder
-irc = irc://irc.perl.org/#mojo
+irc = irc://irc.freenode.net/#mojo
 pod_tests = 1
